@@ -1,3 +1,6 @@
+[0, 17, 32]: 2023-06-17
+  - fix issue with scanner getting stuck in infinite loop
+
 [0, 17, 31]: 2023-05-31
   - added tag.setter on `ScalarEvent` and on `Node`, that takes either 
     a `Tag` instance, or a str 
